kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rps-game-service
spec:
  selector:
    app: rps-game
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
