kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rps-game-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rps-game.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rps-game-service
                port:
                  number: 8080
